src/objects/Route__c.object
<CustomObject>
    <description>Route object to display daily route for the drivers</description>
    <fields>
        <fullName>Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Route Driver</description>
        <label>Driver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Route Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Route_Description__c</fullName>
        <label>Route Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Route_No__c</fullName>
        <externalId>true</externalId>
        <label>SAP Route No</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Shipment_Number__c</fullName>
        <label>Shipment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transit_Time__c</fullName>
        <inlineHelpText>Enter times in Hours</inlineHelpText>
        <label>Transit Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isCurrentUserDriver__c</fullName>
        <description>This field checks if the current user is the driver assigned to the record.</description>
        <formula>IF( Driver__c == $User.Id, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isCurrentUserDriver</label>
        <type>Checkbox</type>
    </fields>
    <label>Route</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Driver__c</columns>
        <columns>Route_Date__c</columns>
        <columns>SAP_Route_No__c</columns>
        <columns>Shipment_Number__c</columns>
        <columns>Transit_Time__c</columns>
        <columns>Route_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Daily_Route</fullName>
        <columns>NAME</columns>
        <columns>SAP_Route_No__c</columns>
        <columns>Shipment_Number__c</columns>
        <columns>Transit_Time__c</columns>
        <columns>Route_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isCurrentUserDriver__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Route_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Daily Route</label>
    </listViews>
    <listViews>
        <fullName>My_Routes</fullName>
        <columns>NAME</columns>
        <columns>SAP_Route_No__c</columns>
        <columns>Shipment_Number__c</columns>
        <columns>Transit_Time__c</columns>
        <columns>Route_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isCurrentUserDriver__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Routes</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Route No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>